syntax = "proto3";

package profile;

service ProfileService {
  rpc GetUserProfile(UserProfileRequest) returns (UserProfileResponse);
  rpc GetUserProfiles(UserProfileRequest) returns (UserProfilesResponse);
}
// Request messages
message UserProfileRequest {
  string userId = 1;
  string profileUserId = 2;
}

//  Response messages

message UserProfilesResponse {
  repeated UserProfileResponse profiles = 1;
}

message UserProfileResponse {
  string id = 1;
  string userId = 2;
  string photoUrl = 3;
  string firstName = 4;
  string lastName = 5;
  string dateOfBirth = 6;
  string country = 7;
  string city = 8;
  string aboutMe = 9;
  bool followed = 10;
  int32 subscribers = 11;
  int32 subscriptions = 12;
}