syntax = "proto3";
package files;
// import "google/protobuf/wrappers.proto";
message FileChunk {
  bytes chunkData = 1;
  string filename = 2;
  string userId = 3;
  string postId = 4;
}

message UploadResponse {
  bool success = 1;
  string message = 2;
}

message LoadOnS3Request {
  string userId = 1;
  string postId = 2;
}

message LoadOnS3Response {
  bool success = 1;
  string message = 2;
}

message ProfileFileChunk {
  bytes chunkData = 1;
  string filename = 2;
  string userId = 3;
  string mimetype = 4; 
  int64 size = 5; 
}

message ProfileUploadResponse {
  bool success = 1;
  string message = 2;
}

service FileService {
  rpc Upload (stream FileChunk) returns (UploadResponse);
  rpc UploadProfile (stream ProfileFileChunk) returns (ProfileUploadResponse);
  rpc LoadOnS3 (LoadOnS3Request) returns (LoadOnS3Response);
}

